# rust-demos

./: .gitignore  Cargo.toml  README.md  TeachingManagementSystem_2024-12-16.sql  TeachingManagementSystem_2024-12-27.sql  TeachingManagementSystem_2025-04-09.sql  TeachingManagementSystem_2025-06-01.sql  interface.md  model.md
.CodeCounter/: details.md  results.md  results.txt
server/: app.js  data  package-lock.json  package.json
server/src/: data.sql  websocket.js
server/src/config/: data.sql  database.js
server/src/controllers/: adminController.js  aiController.js  authController.js  chatController.js  classroomController.js  courseController.js  departmentController.js  gradeController.js  logController.js  studentController.js  studentCourseController.js  systemController.js  teacherController.js  teachingTaskController.js  userController.js
server/src/database/: data.md  data.sql  init.sql
server/src/routes/: authRoutes.js  courseRoutes.js  index.js  studentCourseRoutes.js  studentRoutes.js
src/: 02_functions.rs  03_control_flow.rs  04_ownership.rs  05_structs.rs  06_enums_and_pattern_matching.rs  07_collections.rs  08_packages_and_modules.rs  09_error_handling.rs  10_generics_traits_lifetimes.rs  main.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue  main.js
web/src/components/: ChatRoom.vue  CourseCard.vue  CourseSchedule.vue
web/src/layout/: index.vue
web/src/layouts/: BasicLayout.vue
web/src/router/: index.js
web/src/stores/: user.js
web/src/views/: Home.vue  Login.vue  Profile.vue
(+21 files in other folders)
